Bug 1285425 - Set forms to valid in their constructor. r=bz